<resources>
    <string name="app_name">Pokedex</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>
    <string name="hint_search">Search Pokemons</string>
    <string name="no_pokemons_found">No Pokemon found.</string>
    <string name="placeholder_text">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis.</string>
    <string name="more_info">MORE INFO</string>
    <string name="clear_my_favorites_list">CLEAR MY FAVORITES LIST</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="clear_favorites_list">Clear favorites list?</string>
    <string name="favorites_is_clear">Favorites list is clear.</string>
    <string name="sofascore_android_academy">SofaScore Android Academy</string>
    <string name="class_2021">Class 2021</string>
    <string name="app_name_assist">App Name</string>
    <string name="api_credit">API Credit</string>
    <string name="pokeapi">PokeAPI</string>
    <string name="developer">Developer</string>
    <string name="dev_name">Rafael Boban</string>
    <string name="something_went_wrong">Oops, Something Went Wrong.</string>
    <string name="retry">Retry</string>
    <string name="favorites_are_empty">Favorites list is empty.</string>
    <string name="check_connection">Check Your Connection and Try Again.</string>
    <string name="generation_separator_text">Generation %1$s</string>
    <string name="height_format">%1$s\'%2$s\" (%3$s m)</string>
    <string name="weight_format">%1$s lbs. (%2$s kg)</string>
    <string name="hidden_ability">Hidden Ability</string>
    <string name="stats">Stats</string>
    <string name="abilities">Abilities</string>
    <string name="speed">Speed:</string>
    <string name="sp_def">Sp. Def:</string>
    <string name="sp_atk">Sp. Atk:</string>
    <string name="defense">Defense:</string>
    <string name="attack">Attack:</string>
    <string name="hp">HP:</string>
    <string name="fetching_more_pokemon">Loading Pokemon…</string>
    <string name="page_num">%1$s/%2$s</string>
    <string name="pp_format">%1$s\n(max %2$s)</string>
    <string name="sprites">Sprites</string>
    <string name="ok">OK</string>
    <string name="pokedex_num">Pokedex Num</string>
    <string name="type">Type</string>
    <string name="height">HEIGHT</string>
    <string name="weight">WEIGHT</string>
    <string name="evolution">Evolution</string>
    <string name="unevolved">UNEVOLVED</string>
    <string name="varies">Varies</string>
    <string name="first_evolution">1ST EVOLUTION</string>
    <string name="second_evolution">2ND EVOLUTION</string>
    <string name="level_format">Lv %1$s</string>
    <string name="type_title">%1$s Type</string>
    <string name="double_multiplier">2X</string>
    <string name="half_multiplier">1/2X</string>
    <string name="zero_multiplier">0X</string>


    <string-array name="languages">
        <item>English</item>
        <item>German</item>
        <item>French</item>
    </string-array>
    <string name="title_activity_type">TypeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offensive">Offensive</string>
    <string name="power">Power</string>
    <string name="types">Types</string>
    <string name="defensive">Defensive</string>
    <string name="none">None</string>
    <string name="check_your_connection">Check your connection.</string>

</resources>