<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.type_tabs.DamageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_offensive"
                style="@style/Headline2DarkCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/offensive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/desc_power"
                style="@style/DescriptionDarkLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/power"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@+id/card_damage_2x"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/desc_type"
                style="@style/DescriptionDarkLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="72dp"
                android:text="@string/types"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@+id/card_damage_2x"
                app:layout_constraintStart_toStartOf="parent" />

            <include
                android:id="@+id/card_damage_2x"
                layout="@layout/damage_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@id/tv_offensive" />

            <include
                android:id="@+id/card_damage_0.5x"
                layout="@layout/damage_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/card_damage_2x" />

            <include
                android:id="@+id/card_damage_0x"
                layout="@layout/damage_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/card_damage_0.5x" />

            <TextView
                android:id="@+id/tv_defensive"
                style="@style/Headline2DarkCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/defensive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_damage_0x" />

            <TextView
                android:id="@+id/desc_power_def"
                style="@style/DescriptionDarkLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/power"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@+id/card_defence_2x"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/desc_type_def"
                style="@style/DescriptionDarkLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="72dp"
                android:text="@string/types"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@+id/card_defence_2x"
                app:layout_constraintStart_toStartOf="parent" />

            <include
                android:id="@+id/card_defence_2x"
                layout="@layout/damage_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@id/tv_defensive" />

            <include
                android:id="@+id/card_defence_0.5x"
                layout="@layout/damage_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/card_defence_2x" />

            <include
                android:id="@+id/card_defence_0x"
                layout="@layout/damage_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_defence_0.5x" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>